--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>negroid</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>negroid</h1>
-    
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam corrupti numquam quisquam minus aliquid rerum dolores alias et fugiat ut, magni, necessitatibus, hic incidunt quasi quos facere asperiores aut repellat?</p>
 </body>
 </html>
