--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>negroid</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam corrupti numquam quisquam minus aliquid rerum dolores alias et fugiat ut, magni, necessitatibus, hic incidunt quasi quos facere asperiores aut repellat?</p>
+    <img src="img/salat-s-fasolyu-3.jpg" alt="faso">
 </body>
 </html>
