--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>negroid</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquam corrupti numquam quisquam minus aliquid rerum dolores alias et fugiat ut, magni, necessitatibus, hic incidunt quasi quos facere asperiores aut repellat?</p>
     <img src="img/salat-s-fasolyu-3.jpg" alt="faso">
+    <fieldset>pidoro</fieldset>
 </body>
 </html>
